<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.simuel.wirebarley.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_exchange_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/exchange_rate_calculation_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_remittance_country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/remittance_country"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exchange_title" />

        <TextView
            android:id="@+id/tv_remittance_country_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/USA"
            app:layout_constraintStart_toEndOf="@+id/tv_remittance_country_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_exchange_title" />

        <TextView
            android:id="@+id/tv_recipient_country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/recipient_country"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_remittance_country_title" />

        <TextView
            android:id="@+id/tv_recipient_country_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:text="@{vm.country.name}"
            app:layout_constraintStart_toEndOf="@+id/tv_recipient_country_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_remittance_country_content"
            tools:text="한국 (KRW)" />

        <TextView
            android:id="@+id/tv_exchange_rate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/exchange_rate"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipient_country_title" />

        <TextView
            android:id="@+id/tv_exchange_rate_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@{vm.currencyRate}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_exchange_rate_title"
            app:layout_constraintStart_toEndOf="@+id/tv_exchange_rate_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipient_country_content"
            tools:text="1,130.05 KRW / USD" />

        <TextView
            android:id="@+id/tv_exchange_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:layout_marginStart="32dp"
            android:text="@string/exchange_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exchange_rate_title" />

        <TextView
            android:id="@+id/tv_exchange_time_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@{vm.currentTime}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_exchange_time_title"
            app:layout_constraintStart_toEndOf="@+id/tv_exchange_time_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_exchange_rate_content"
            tools:text="2022-03-03 16:13" />

        <TextView
            android:id="@+id/tv_remittance_title"
            android:text="@string/remittance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exchange_time_title" />


        <TextView
            android:id="@+id/tv_remittance_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/usd"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/et_remittance_title"
            app:layout_constraintStart_toEndOf="@+id/et_remittance_title"
            app:layout_constraintTop_toTopOf="@+id/tv_remittance_title" />

        <EditText
            android:id="@+id/et_remittance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:text="@={vm.remittance}"
            android:inputType="number"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintBottom_toBottomOf="@+id/tv_remittance_title"
            app:layout_constraintStart_toEndOf="@+id/tv_remittance_title"
            app:layout_constraintTop_toTopOf="@+id/tv_remittance_title" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@{@string/result_message(vm.receivedResult)}"
            tools:text="수취금액은 113,004.98 입니다."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_remittance_title" />

        <NumberPicker
            android:id="@+id/number_picker_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>